# otus-cpp-developer-professional

./: .gitignore  Doxyfile  README.md
.github/workflows/: release.yml  static.yml
hw1-build-test-deploy/: CMakeLists.txt  lib.cpp  lib.h  main.cpp  test_version.cpp  version.h.in
hw10-async-server/: CMakeLists.txt  async.cpp  async.h  asyncdefs.h  asyncserver.h  filelogger.cpp  filelogger.h  main.cpp  options.h  parser.cpp  parser.h
hw11-join-server/: CMakeLists.txt  asyncserver.h  dbmanager.cpp  dbmanager.h  errorcode.h  main.cpp  parser.cpp  parser.h
hw12-map-reduce/: Makefile  mapper_mean.cpp  mapper_var.cpp  output_mean  output_var  reducer_mean.cpp  reducer_var.cpp  run_locally_mean.sh  run_locally_var.sh
hw12-map-reduce/matlab/: main.m  output_mean_matlab.txt  output_var_matlab.txt
hw13-ml-inference/: CMakeLists.txt  helpers.cpp  helpers.h  main.cpp  tfclassifier.cpp  tfclassifier.h
hw13-ml-inference/test/: tftest.cpp
hw2-ip-filtering/: CMakeLists.txt  ipaddrpool.cpp  ipaddrpool.h  main.cpp  main.h  reader.cpp  reader.h  test_ip_filter.cpp
hw3-allocator/: CMakeLists.txt  benchmark.cpp  forwardlist.h  main.cpp  poolallocator.h
hw4-sfinae/: CMakeLists.txt  main.cpp  printip.h
hw4-sfinae/html/: dir_db6a84d41b91c4e65bf175124746b94e.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html  printip_8h.html  printip_8h__incl.dot  printip_8h_source.html
hw4-sfinae/html/search/: all_0.js  files_0.js  functions_0.js
hw5-editor/: CMakeLists.txt  main.cpp
hw5-editor/document/: document.h
hw5-editor/shapes/: point.h  shape.h  triangle.h
hw5-editor/ui/: ui.h
hw6-matrix/: CMakeLists.txt  main.cpp  matrix.h  test_matrix.cpp
hw7-packet-parser/: CMakeLists.txt  consolelogger.cpp  consolelogger.h  filelogger.cpp  filelogger.h  main.cpp  parser.cpp  parser.h  source.cpp  source.h
hw8_boost/: CMakeLists.txt  config.cpp  config.h  duplicatefinder.cpp  duplicatefinder.h  main.cpp
hw8_boost/test_folder/exclude/: exclude_file2.txt
hw8_boost/test_folder/test_subfolder/: subfile.txt
hw8_boost/test_folder/test_subfolder1/: subfile1.txt
hw9-multithreading/: CMakeLists.txt  consolelogger.cpp  consolelogger.h  filelogger.cpp  filelogger.h  main.cpp  parser.cpp  parser.h  waitingqueue.h
